--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                             globalMonth[date1.getMonth()] +
                             " " +
                             date1.getDate();
-                          team += '</div><div id="left-level-2-1-body-top">';
+                          team += '</div><div id="left-level-2-1-body-top" class="fando-card-body-top">';
                           for (
                             let k = 0;
                             k < groupLavel.sections[0].teamsOrdering.length;
@@ -333,7 +333,7 @@
                             globalMonth[date2.getMonth()] +
                             " " +
                             date2.getDate();
-                          team += '</div><div id="left-level-2-1-body-bottom">';
+                          team += '</div><div id="left-level-2-1-body-bottom" class="fando-card-body-bottom">';
                           for (
                             let k = 0;
                             k < groupLavel.sections[1].teamsOrdering.length;
@@ -371,7 +371,9 @@
                 var dragSrcEl = null;
                 function dragEnter2_1(e) {
                   if (
-                    e.target.id == "left-level-2-1-body-top" &&
+                    !e.target.parentElement.classList.contains(
+                      "fando-card-body-top"
+                    ) &&
                     e.target.parentElement.id != dragSrcEl.id
                   ) {
                     e.target.parentElement.classList.add("task-hover");
@@ -425,8 +427,10 @@
                 var dragSrcEl2 = null;
                 function dragEnter2_2(e) {
                   if (
-                    e.target.id == "left-level-2-1-body-bottom" &&
-                    e.target.parentElement.id != dragSrcEl.id
+                    !e.target.parentElement.classList.contains(
+                      "fando-card-body-bottom"
+                    ) &&
+                    e.target.parentElement.id != dragSrcEl2.id
                   ) {
                     e.target.parentElement.classList.add("task-hover");
                   }
@@ -437,7 +441,7 @@
                 }
 
                 function dragEnd2_2(e) {
-                  dragSrcEl.style.opacity = "1";
+                  dragSrcEl2.style.opacity = "1";
 
                   $(".task-hover").removeClass("task-hover");
                 }
@@ -676,7 +680,7 @@
                               (k + 1) +
                               '" draggable="true"';
                             team +=
-                              'ondragstart="drag3_2(event)" ondrop="drop3_2(event)" ondragover="allowDrop3_2(event)">';
+                              'ondragstart="drag3_2(event)" ondrop="drop3_2(event)" ondragover="allowDrop3_2(event)" ondragenter="dragEnter3_2(event)" ondragleave="dragLeave3_2(event)" ondragend="dragEnd3_2(event)">';
                             team += '<div class="team-color red"><img src="';
                             team += teamsOrderingLevel.team[0].TeamLogo;
                             team += '" alt=""></div>';
@@ -707,6 +711,26 @@
 
                 // Swap Code
                 var dragSrcEl = null;
+                function dragEnter3_2(e) {
+                  if (
+                    !e.target.parentElement.classList.contains(
+                      "fando-card-body"
+                    ) &&
+                    e.target.parentElement.id != dragSrcEl.id
+                  ) {
+                    e.target.parentElement.classList.add("task-hover");
+                  }
+                }
+
+                function dragLeave3_2(e) {
+                  e.target.parentElement.classList.remove("task-hover");
+                }
+
+                function dragEnd3_2(e) {
+                  dragSrcEl.style.opacity = "1";
+
+                  $(".task-hover").removeClass("task-hover");
+                }
 
                 function drag3_2(e) {
                   dragSrcEl = e.target;
@@ -771,7 +795,7 @@
                             globalMonth[date1.getMonth()] +
                             " " +
                             date1.getDate();
-                          team += '</div><div id="left-level-4-top">';
+                          team += '</div><div id="left-level-4-top" class="fando-card-body-top">';
                           for (
                             let k = 0;
                             k < groupLavel.sections[0].teamsOrdering.length;
@@ -784,7 +808,7 @@
                               (k + 1) +
                               '" draggable="true"';
                             team +=
-                              'ondragstart="drag4_1(event)" ondrop="drop4_1(event)" ondragover="allowDrop4_1(event)">';
+                              'ondragstart="drag4_1(event)" ondrop="drop4_1(event)" ondragover="allowDrop4_1(event)" ondragenter="dragEnter4_1(event)" ondragleave="dragLeave4_1(event)" ondragend="dragEnd4_1(event)">';
                             team += '<div class="team-color red"><img src="';
                             team += teamsOrderingLevel.team[0].TeamLogo;
                             team += '" alt=""></div>';
@@ -803,7 +827,7 @@
                             globalMonth[date2.getMonth()] +
                             " " +
                             date2.getDate();
-                          team += '</div><div id="left-level-4-bottom">';
+                          team += '</div><div id="left-level-4-bottom" class="fando-card-body-bottom">';
                           for (
                             let k = 0;
                             k < groupLavel.sections[1].teamsOrdering.length;
@@ -816,7 +840,7 @@
                               (k + 1) +
                               '" draggable="true"';
                             team +=
-                              'ondragstart="drag4_2(event)" ondrop="drop4_2(event)" ondragover="allowDrop4_2(event)">';
+                              'ondragstart="drag4_2(event)" ondrop="drop4_2(event)" ondragover="allowDrop4_2(event)" ondragenter="dragEnter4_2(event)" ondragleave="dragLeave4_2(event)" ondragend="dragEnd4_2(event)">';
                             team += '<div class="team-color red"><img src="';
                             team += teamsOrderingLevel.team[0].TeamLogo;
                             team += '" alt=""></div>';
@@ -840,6 +864,26 @@
 
                 // Swap Code
                 var dragSrcEl = null;
+                function dragEnter4_1(e) {
+                  if (
+                    !e.target.parentElement.classList.contains(
+                      "fando-card-body-top"
+                    ) &&
+                    e.target.parentElement.id != dragSrcEl.id
+                  ) {
+                    e.target.parentElement.classList.add("task-hover");
+                  }
+                }
+
+                function dragLeave4_1(e) {
+                  e.target.parentElement.classList.remove("task-hover");
+                }
+
+                function dragEnd4_1(e) {
+                  dragSrcEl.style.opacity = "1";
+
+                  $(".task-hover").removeClass("task-hover");
+                }
 
                 function drag4_1(e) {
                   dragSrcEl = e.target;
@@ -876,6 +920,26 @@
                 }
 
                 var dragSrcEl2 = null;
+                function dragEnter4_2(e) {
+                  if (
+                    !e.target.parentElement.classList.contains(
+                      "fando-card-body-bottom"
+                    ) &&
+                    e.target.parentElement.id != dragSrcEl2.id
+                  ) {
+                    e.target.parentElement.classList.add("task-hover");
+                  }
+                }
+
+                function dragLeave4_2(e) {
+                  e.target.parentElement.classList.remove("task-hover");
+                }
+
+                function dragEnd4_2(e) {
+                  dragSrcEl2.style.opacity = "1";
+
+                  $(".task-hover").removeClass("task-hover");
+                }
 
                 function drag4_2(e) {
                   dragSrcEl2 = e.target;
@@ -943,7 +1007,7 @@
                               (k + 1) +
                               '" draggable="true"';
                             team +=
-                              'ondragstart="drag5_1(event)" ondrop="drop5_1(event)" ondragover="allowDrop5_1(event)">';
+                              'ondragstart="drag5_1(event)" ondrop="drop5_1(event)" ondragover="allowDrop5_1(event)" ondragenter="dragEnter5_1(event)" ondragleave="dragLeave5_1(event)" ondragend="dragEnd5_1(event)">';
                             team += '<div class="team-color red"><img src="';
                             team += teamsOrderingLevel.team[0].TeamLogo;
                             team += '" alt=""></div>';
@@ -975,6 +1039,26 @@
                 });
 
                 var dragSrcEl = null;
+                function dragEnter5_1(e) {
+                  if (
+                    !e.target.parentElement.classList.contains(
+                      "fando-card-body"
+                    ) &&
+                    e.target.parentElement.id != dragSrcEl.id
+                  ) {
+                    e.target.parentElement.classList.add("task-hover");
+                  }
+                }
+
+                function dragLeave5_1(e) {
+                  e.target.parentElement.classList.remove("task-hover");
+                }
+
+                function dragEnd5_1(e) {
+                  dragSrcEl.style.opacity = "1";
+
+                  $(".task-hover").removeClass("task-hover");
+                }
 
                 function drag5_1(e) {
                   dragSrcEl = e.target;
@@ -1039,7 +1123,7 @@
                               (k + 1) +
                               '" draggable="true"';
                             team +=
-                              'ondragstart="drag5_2(event)" ondrop="drop5_2(event)" ondragover="allowDrop5_2(event)">';
+                              'ondragstart="drag5_2(event)" ondrop="drop5_2(event)" ondragover="allowDrop5_2(event)" ondragenter="dragEnter5_2(event)" ondragleave="dragLeave5_2(event)" ondragend="dragEnd5_2(event)">';
                             team += '<div class="team-color red"><img src="';
                             team += teamsOrderingLevel.team[0].TeamLogo;
                             team += '" alt=""></div>';
@@ -1071,6 +1155,26 @@
                 });
 
                 var dragSrcEl = null;
+                function dragEnter5_2(e) {
+                  if (
+                    !e.target.parentElement.classList.contains(
+                      "fando-card-body"
+                    ) &&
+                    e.target.parentElement.id != dragSrcEl.id
+                  ) {
+                    e.target.parentElement.classList.add("task-hover");
+                  }
+                }
+
+                function dragLeave5_2(e) {
+                  e.target.parentElement.classList.remove("task-hover");
+                }
+
+                function dragEnd5_2(e) {
+                  dragSrcEl.style.opacity = "1";
+
+                  $(".task-hover").removeClass("task-hover");
+                }
 
                 function drag5_2(e) {
                   dragSrcEl = e.target;
